--- a/style.css
+++ b/style.css
@@ -10,23 +10,24 @@
     --fonte3: "Sriracha", cursive;
 }
 
-body{
-    background-color: darkgray;
+html, body{
+    background-color: white;
+    min-height: 100vh;
 }
 
 header {
     background-color: black;
-    margin: -48px -8px 80px -8px;
     text-align: center;
-    padding-bottom: 50px;
+    padding-bottom: 0px;
+    margin: -100px -8px 0px -8px;
 }
 header > h1 {
     color: white;
     font-family: var(--fonte2);
     font-weight: bolder;
     font-variant: small-caps;
-    font-size: 3em;
-    padding-top: 45px;
+    font-size: 10vw;
+    padding-top: 100px;
     margin-bottom: -20px;
 
 }
@@ -34,19 +35,26 @@ header > h1 {
 header > p {
     color: white;
     font-family: var(--fonte1);
-    font-size: small;
+    font-size: 2.5vw;
+    padding-bottom: 50px;
 }
 
-header > p > a {
+
+a {
     color: white;
-    text-decoration: solid;
+    text-decoration: none;
 }
 
+a:hover {
+    text-decoration: underline;
+}
 section {
     padding-top: 10vh;
     padding-bottom: 10vh;
     padding-left: 30px;
     line-height: 2em;
+    font-family: var(--fonte3);
+    font-size: 4.5vw;
 
 }
 
@@ -57,25 +65,45 @@ section > p {
 .normal {
     background-color: white;
     color: black;
-    font-family: var(--fonte3);
-
 }
 
 .imagem {
-    font-family: var(--fonte3);
     background-color: rgb(51, 51, 51);
+    color: white;
 }
 
 .imagem > p {
     background-color: rgba(0, 0, 0, 0.235);
-    width: 250px;
+    width: 55vw;
 }
 
 #img1 {
-    background-image: url('../imagens/background001.jpg');
+    background-image: url(imagens/background001.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    margin-left: -8px;
 }
 
 #img2 {
-    background-image: url('../D12/imagens/background002.jpg');
+    background-image: url(imagens/background002.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    margin-left: -8px;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    width: auto;
+    margin-left: -10px;
+    margin-right: -8px;
+    margin-bottom: -15px;
+    font-family: var(--fonte1);
+    font-size: 2.5vw;
 }
 
